<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context="incorporation.app.primera.mi.proyectofinal.Cartelera.Cartelera_AccionFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="30dp"
            android:layout_marginTop="25dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="500px"
                    android:layout_margin="10px"
                    android:src="@drawable/caratula_spider_man_regresa" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="500px"
                    android:layout_margin="10px"
                    android:text="@string/descripcion_spiderman"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="500px"
                    android:layout_margin="10px"
                    android:src="@drawable/caratula_wonder_woman" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="500px"
                    android:layout_margin="10px"
                    android:text="@string/descripcion_maravilla"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="500px"
                    android:layout_margin="10px"
                    android:src="@drawable/caratula_transformers" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="500px"
                    android:layout_margin="10px"
                    android:text="@string/descripcion_transformers"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="500px"
                    android:layout_margin="10px"
                    android:src="@drawable/caratula_rey_arturo" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="500px"
                    android:layout_margin="10px"
                    android:text="@string/descripcion_rey_arturo"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="500px"
                    android:layout_margin="10px"
                    android:src="@drawable/caratula_pirates_of_the_caribbean" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="500px"
                    android:layout_margin="10px"
                    android:text="@string/descripcion_piratas"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="500px"
                    android:layout_margin="10px"
                    android:src="@drawable/caratula_la_momia" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="500px"
                    android:layout_margin="10px"
                    android:text="@string/descripcion_momia"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
