<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context="incorporation.app.primera.mi.proyectofinal.Cartelera.Cartelera_TerrorFragment">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="25dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:layout_marginBottom="20dp"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="500px"
                    android:layout_margin="10px"
                    android:src="@drawable/caratula_annabelle2" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="500px"
                    android:layout_margin="10px"
                    android:text="@string/descripcion_anabellle2"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="500px"
                    android:layout_margin="10px"
                    android:src="@drawable/caratula_el_aro3" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="500px"
                    android:layout_margin="10px"
                    android:text="@string/descripcion_el_aro3"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:layout_marginBottom="20dp"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="500px"
                    android:layout_margin="10px"
                    android:src="@drawable/caratula_la_morgue" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="500px"
                    android:layout_margin="10px"
                    android:text="@string/descripcion_la_morgue"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="500px"
                    android:layout_margin="10px"
                    android:src="@drawable/caratula_la_muneca_vudu" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="500px"
                    android:layout_margin="10px"
                    android:text="@string/descripcion_muñeca_budu"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</FrameLayout>
