<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context="incorporation.app.primera.mi.proyectofinal.Cartelera.Cartelera_ComediaFragment">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="30dp"
            android:layout_marginTop="25dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="20dp"
                android:layout_weight="0.5"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="500px"
                    android:layout_margin="10px"
                    android:src="@drawable/caratula_pelea_de_maestros" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="500px"
                    android:layout_margin="10px"
                    android:text="@string/descripcion_pelea_maestros"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="500px"
                    android:layout_margin="10px"
                    android:src="@drawable/caratula_porque_el" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="500px"
                    android:layout_margin="10px"
                    android:text="@string/descripcion_porque_el"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="20dp"
                android:layout_weight="0.5"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="500px"
                    android:layout_margin="10px"
                    android:src="@drawable/caratula_patrulla_motorizada" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="500px"
                    android:layout_margin="10px"
                    android:text="@string/descripcion_patrulla_motos"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="500px"
                    android:layout_margin="10px"
                    android:src="@drawable/caratula_naked" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="500px"
                    android:layout_margin="10px"
                    android:text="@string/descripcion_naked"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>
